--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <div id="container"></div>
+    <div id="App"></div>
     <script src="index.min.js"></script>
 </body>
 </html>
